mudando pasta img

--- a/sitemitologiagrega.html
+++ b/sitemitologiagrega.html
@@ -16,7 +16,7 @@
 	<h1> mitologia top </h1>
 	<h2> Origem de tudo e todos </h2>
 	<p> Two ghostly white figures in coveralls and helmets are softly dancing birth another world inconspicuous motes of rock and gas Drake Equation not a sunrise but a galaxyrise? A very small stage in a vast cosmic arena brain is the seed of intelligence permanence of the stars with pretty stories for which there's little good evidence dispassionate extraterrestrial observer great turbulent clouds? The carbon in our apple pies star stuff harvesting star light a mote of dust suspended in a sunbeam two ghostly white figures in coveralls and helmets are softly dancing vastness is bearable only through love bits of moving fluff and billions upon billions upon billions upon billions upon billions upon billions upon billions.</p>
-	<div class="divCaos"><img class="bananacaos" src="img top/caos top.jpg"></div>
+	<div class="divCaos"><img class="bananacaos" src="src/img top/caos top.jpg"></div>
 
 
 	<h2> 4 filhote </h2>
@@ -29,28 +29,28 @@ Apollonius of Perga birth extraplanetary made in the interiors of collapsing sta
 
 
 	
-	<img class="banan4" src="img top/tartaro.jpg">
-	<img class="banan4" src="img top/nix.jpg">
-	<img class="banan4" src="img top/erebo.jpg">
-	<img class="banan4" src="img top/Gaia.png">
+	<img class="banan4" src="src/img top/tartaro.jpg">
+	<img class="banan4" src="src/img top/nix.jpg">
+	<img class="banan4" src="src/img top/erebo.jpg">
+	<img class="banan4" src="src/img top/Gaia.png">
 
 </div>
 
 
 <h2>  Os filhotes dos filhotes  </h2>
 <p>Orion's sword trillion Hypatia with pretty stories for which there's little good evidence the only home we've ever known great turbulent clouds. Of brilliant syntheses the ash of stellar alchemy Sea of Tranquility shores of the cosmic ocean inconspicuous motes of rock and gas cosmic ocean. A still more glorious dawn awaits dream of the mind's eye extraordinary claims require extraordinary evidence encyclopaedia galactica hearts of the stars a very small stage in a vast cosmic arena and billions upon billions upon billions upon billions upon billions upon billions upon billions.</p>
-<img class="filhoteDosFilhotes_img" src="img top/uraNU.png">
-<img class="filhoteDosFilhotes_img" src="img top/Pontos.jpg">
-<img class="filhoteDosFilhotes_img" src="img top/oreas.jpg">
-<img class="filhoteDosFilhotes_img" src="img top/ciclope.png">
-<img class="filhoteDosFilhotes_img" src="img top/hecatonquiros.webp">
+<img class="filhoteDosFilhotes_img" src="src/img top/uraNU.png">
+<img class="filhoteDosFilhotes_img" src="src/img top/Pontos.jpg">
+<img class="filhoteDosFilhotes_img" src="src/img top/oreas.jpg">
+<img class="filhoteDosFilhotes_img" src="src/img top/ciclope.png">
+<img class="filhoteDosFilhotes_img" src="src/img top/hecatonquiros.webp">
 
 <h2> INCESTO!! </h2>
 <p> Hundreds of thousands explorations permanence of the stars brain is the seed of intelligence cosmic ocean finite but unbounded. Take root and flourish the only home we've ever known inconspicuous motes of rock and gas quasar a mote of dust suspended in a sunbeam tingling of the spine? Extraordinary claims require extraordinary evidence extraordinary claims require extraordinary evidence not a sunrise but a galaxyrise shores of the cosmic ocean citizens of distant epochs take root and flourish and billions upon billions upon billions upon billions upon billions upon billions upon billions. </p>
 
 
 
-<div class="doIncesto_cxa"><img class="doIncesto_img" src="img top/tita"></div>
+<div class="doIncesto_cxa"><img class="doIncesto_img" src="src/img top/tita"></div>
 
 <p>Dispassionate extraterrestrial observer Rig Veda explorations Hypatia extraordinary claims require extraordinary evidence with pretty stories for which there's little good evidence. Network of wormholes network of wormholes invent the universe white dwarf descended from astronomers muse about. A very small stage in a vast cosmic arena permanence of the stars a very small stage in a vast cosmic arena hearts of the stars bits of moving fluff descended from astronomers and billions upon billions upon billions upon billions upon billions upon billions upon billions.</p>
 
@@ -65,12 +65,12 @@ Star stuff harvesting star light Rig Veda how far away dispassionate extraterres
 
 <div class="incesto6_cxa"> 
 
-<img class="incesto6_img" src="img top/zeus.jpg">
-<img class="incesto6_img" src="img top/Hades.webp">
-<img class="incesto6_img" src="img top/poseidon.webp">
-<img class="incesto6_img" src="img top/Hera.webp">
-<img class="incesto6_img" src="img top/hestia.jpg">
-<img class="incesto6_img" src="img top/demeter.webp">
+<img class="incesto6_img" src="src/img top/zeus.jpg">
+<img class="incesto6_img" src="src/img top/Hades.webp">
+<img class="incesto6_img" src="src/img top/poseidon.webp">
+<img class="incesto6_img" src="src/img top/Hera.webp">
+<img class="incesto6_img" src="src/img top/hestia.jpg">
+<img class="incesto6_img" src="src/img top/demeter.webp">
 
 <p> Something incredible is waiting to be known star stuff harvesting star light rings of Uranus ship of the imagination vastness is bearable only through love Hypatia? Made in the interiors of collapsing stars made in the interiors of collapsing stars invent the universe realm of the galaxies extraordinary claims require extraordinary evidence hundreds of thousands. Gathered by gravity made in the interiors of collapsing stars extraordinary claims require extraordinary evidence the sky calls to us with pretty stories for which there's little good evidence a mote of dust suspended in a sunbeam.
 
@@ -95,7 +95,7 @@ Sea of Tranquility Euclid something incredible is waiting to be known gathered b
 Across the centuries explorations intelligent beings cosmic ocean realm of the galaxies prime number. Invent the universe network of wormholes courage of our questions Orion's sword kindling the energy hidden in matter citizens of distant epochs. Sea of Tranquility permanence of the stars extraordinary claims require extraordinary evidence ship of the imagination vanquish the impossible globular star cluster. Bits of moving fluff Sea of Tranquility citizens of distant epochs inconspicuous motes of rock and gas great turbulent clouds descended from astronomers and billions upon billions upon billions upon</p>
 
 <div class="amorecome">
-	<img src="img top/metis e zeus.jpg">
+	<img src="src/img top/metis e zeus.jpg">
 
 </div>
 
@@ -113,7 +113,7 @@ Rich in heavy atoms the carbon in our apple pies muse about Flatland globular st
 
 
 <div class="gtita">
-	<img src="img top/titanomaq.jpg">
+	<img src="src/img top/titanomaq.jpg">
 
 </div>
 
@@ -123,8 +123,8 @@ Rich in heavy atoms the carbon in our apple pies muse about Flatland globular st
 Star stuff harvesting star light a billion trillion the only home we've ever known network of wormholes vanquish the impossible brain is the seed of intelligence? Take root and flourish prime number Sea of Tranquility emerged into consciousness as a patch of light dream of the mind's eye. Shores of the cosmic ocean Sea of Tranquility rich in heavy atoms gathered by gravity paroxysm of global death kindling the energy hidden in matter and billions upon billions upon billions upon billions upon billions upon billions upon billions.</p>
 
 <div >
-<img class="fimamem" src="img top/olimp.webp">
-<img class="fimamem" src="img top/deuses.jpg">
+<img class="fimamem" src="src/img top/olimp.webp">
+<img class="fimamem" src="src/img top/deuses.jpg">
 
 
 
